--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>MORPH</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <link rel="shortcut icon" href="{% include avatar_url %}?s=16">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/mobile.css">
-  <link rel="stylesheet" href="/css/desktop.css" media="(min-width:40em)">
+  <link rel="stylesheet" href="/css/desktop.css">
   <link rel="stylesheet" href="/css/pygments.css">
   <link rel="stylesheet" href="/css/font.css">
 </head>
