--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,11 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>MORPH</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/mobile.css">
-  <link rel="stylesheet" href="/css/desktop.css" media="(min-width:40em)">
+  <link rel="stylesheet" href="/css/desktop.css">
   <link rel="stylesheet" href="/css/pygments.css">
   <link rel="stylesheet" href="/css/font.css">
   <script type="text/javascript" charset="utf-8" src="/js/matchmedia.js"></script>
